--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "env\\Scripts\\python.exe",
+    "python.pythonPath": "c:\\Users\\awels\\uvic\\seng411\\Reaction-Time-Experiment\\env\\Scripts\\python.exe",
     "git.ignoreLimitWarning": true
 }
