--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2020.12.5
 chardet==4.0.0
 dj-database-url==0.5.0
 Django==3.1.7
+django-cors-headers==3.7.0
 django-crispy-forms==1.11.1
 django-heroku==0.3.1
 gunicorn==20.0.4
